--- a/styles.scss
+++ b/styles.scss
@@ -12,18 +12,36 @@
 #moedict-extension.ui-tooltip {
     @include fonts;
     background: #fffcfc !important;
+    border: 1px solid #a99;
+    @include border-radius(5px);
+    @include box-shadow(hsl(0,0%,83%) 0 3px 3px);
+    padding: 2px;
     &.bpmf {
         font-size: 80%;
         width: auto;
         min-width: auto;
         background: #f0f0f0;
     }
+    .pinyin {
+        float: right;
+    }
     .xrefs {
         display: none;
     }
     .entry .part-of-speech {
+        @include border-radius(3px);
+        display: inline-block;
         position: absolute;
         left: 7px;
+        color: #eee;
+        background: #111;
+        a {
+            cursor: normal;
+            color: #eef;
+        }
+    }
+    a {
+        color: #007;
     }
     li {
         .part-of-speech {
@@ -47,7 +65,6 @@
     }
     min-width: 300px;
     width: 300px;
-    max-height: 300px;
     overflow: hidden;
     word-break: break-all;
     .bopomofo {
