--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@
     border: 1px solid #a99;
     @include border-radius(5px);
     @include box-shadow(hsl(0,0%,83%) 0 3px 3px);
-    padding: 2px;
+    padding: 10px; // FIXING in extension
     &.bpmf {
         font-size: 80%;
         width: auto;
@@ -34,7 +34,8 @@
         position: absolute;
         left: 7px;
         color: #eee;
-        background: #111;
+        background: rgb(107, 0, 0); // FIXING in extension
+        padding: 1px; // FIXING in extension
         a {
             cursor: normal;
             color: #eef;
@@ -60,6 +61,7 @@
         padding: 0 !important;
     }
     .entry {
+        padding-left: 10px; // FIXING in extension
         border-bottom: none;
         font-size: 80%;
     }
@@ -84,5 +86,22 @@
     }
     .quote, .antonyms, .synonyms, .variants, .radical {
         display: none;
+    }
+    // FIXING in exntion. copy from moedict-webkit L400 ".result a"
+    & a {
+        color: #000;
+        text-decoration: none;
+        &:hover, &:focus {
+            background: #ddd;
+            background-image: #ddd !important;
+            color: #0070A3;
+            outline: 1px solid hsl(197,96%,70%);
+        }
+        &.erase:hover, &.lang:hover {
+            background: #ddd;
+            outline: none !important;
+            border: none;
+            border-radius: 30px;
+        }
     }
 }
